# sql-database

./: Makefile  Makefile.am  Makefile.in  README.md  ]  aclocal.m4  authentication.lo  btree.lo  check_access  check_commit  check_sql_client  check_sql_parser  check_storage  check_utility.lo  config.h  config.status  configure  configure.ac  diskio.lo  libaccess.la  libbtree.la  libcheck.la  libclient.la  libdiskio.la  libparser.la  libserver.la  libtool  libutility.la  massif.out.10128  networking.lo  sql_main.c  sql_parser.lo  sql_server.lo  sqlaccess.lo  sqlclient  sqlserver  test_serialize.csd  utility.lo
.deps/: authentication.Plo  btree.Plo  check_access-check_access.Po  check_access-check_utility.Po  check_access.Po  check_commit-check_commit.Po  check_commit.Po  check_sql_client-check_sql_client.Po  check_sql_client.Po  check_sql_parser-check_sql_parser.Po  check_storage-check_storage.Po  check_storage.Po  check_utility.Plo  check_utility.Po  diskio.Plo  networking.Plo  sql_client.Plo  sql_parser.Plo  sql_server.Plo  sqlaccess.Plo  sqlclient.Po  sqlserver.Po  utility.Plo
.libs/: 21491-lt-check_commit  check_access  check_commit  check_sql_client  check_sql_parser  check_storage  check_utility  libaccess.la  libaccess.lai  libaccess.so.0.0.0  libbtree.la  libbtree.lai  libbtree.so.0.0.0  libcheck.lai  libcheck.so.0.0.0  libclient.lai  libclient.so.0.0.0  libdiskio.lai  libdiskio.so.0.0.0  libparser.lai  libparser.so.0.0.0  libserver.lai  libserver.so.0.0.0  libutility.lai  libutility.so.0.0.0  lt-check_access  lt-check_commit  lt-check_sql_client  lt-check_sql_parser  lt-check_storage  lt-sqlclient  lt-sqlserver  sqlclient  sqlserver
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
data/test_database/: test_table.csd  test_table.csf  test_table.csi
libs/libbtree/: .btree.c.swp  btree.c  btree.h  btree.h.gch
libs/libutility/: .utility.c.swp  utility.c  utility.h  utility.h.gch
src/: Makefile  Makefile.am  Makefile.in  main  main.c  sql_client.lo
src/.deps/: main.Po  sql_client.Plo
src/.libs/: libclient.lai  libclient.so.0.0.0  main
src/client/: .sql_client.c.swp  makeheaders  sql_client.c  sql_client.h  sqlclient  sqlclient.c  sqlclient.h
src/networking/: networking.c  networking.h  networking.h.gch
src/serialize/: serialize.c
src/server/: sql_server.c  sqlserver  sqlserver.c
src/server/access/: .sqlaccess.c.swo  .sqlaccess.c.swp  .swp  sql_parser.c  sql_parser.h  sql_parser.h.gch  sqlaccess.c  sqlaccess.h  sqlaccess.h.gch
src/server/storage/: .diskio.c.swp  diskio.c  diskio.h  diskio.h.gch
tests/: .check_sql_parser.c.swp  .check_storage.c.swp  Makefile  Makefile.am  Makefile.in  check_access.c  check_commit.c  check_sql_client  check_sql_client.c  check_sql_parser.c  check_storage.c  check_utility.c  check_utility.h  check_utility.h.gch
tests/.deps/: check_sql_client.Po
tests/.libs/: check_sql_client  lt-check_sql_client
